fixed scrollbars for article

--- a/front-end/articleStyles.css
+++ b/front-end/articleStyles.css
@@ -72,7 +72,7 @@ footer a{
 #articleContent{
     display: flex;
     flex-flow: column nowrap;
-    overflow: scroll;
+    overflow: auto;
     height: 100%;
     width: 100%;
 }
